service/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
  #   nginx.ingress.kubernetes.io/ssl-redirect: "false"
  #   nginx.ingress.kubernetes.io/enable-cors: "true"
  #   nginx.ingress.kubernetes.io/cors-allow-origin: "*"
  #   nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
  #   nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range"
  #   nginx.ingress.kubernetes.io/cors-expose-headers: "Content-Length,Content-Range"
  #   nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
  #   nginx.ingress.kubernetes.io/cors-max-age: "1728000"
  labels:
    name: web-ingress
spec:
  rules:
  - host: mysite.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: websrvc
            port: 
              number: 8080
